crates/awm-tui/tests/snapshots/snapshot__markdown_table.snap
---
source: crates/awm-tui/tests/snapshot.rs
assertion_line: 139
expression: buffer_to_string(tui.backend())
---
┌⠋ responding  @0 worker [-] 0tok──────────────────────────┐
│Here are the phases:                                      │
│                                                          │
│┌───────┬────────┬──────────────────────┐                 │
││ Phase │ Status │ Notes                │                 │
│├───────┼────────┼──────────────────────┤                 │
││ 0     │  done  │ scaffold             │                 │
││ 1     │  done  │ frozen contracts     │                 │
││ 4     │  wip   │ hardening            │                 │
│└───────┴────────┴──────────────────────┘                 │
│                                                          │
│▎ tables render bordered now                              │
│                                                          │
│1. first                                                  │
│2. second                                                 │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
