crates/awm-tui/tests/snapshots/snapshot__master_stack.snap
---
source: crates/awm-tui/tests/snapshot.rs
expression: buffer_to_string(tui.backend())
---
┌! @1 cleaner [#2] BLOCKED 1020tok─────────────────┐┌@0 builder [#1] working 36┐
│⏸ approval: Bash rm -rf build                     ││⏺ Bash(cargo build)       │
│                                                  ││⎿ Finished dev            │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
│                                                  ││                          │
└──────────────────────────────────────────────────┘└──────────────────────────┘
