crates/awm-tui/tests/snapshots/snapshot__monocle.snap
---
source: crates/awm-tui/tests/snapshot.rs
expression: buffer_to_string(tui.backend())
---
┌@0 builder [#1] working 3600tok───────────────────────────────────────────────┐
│compiling awm-core                                                            │
│Finished dev                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
