crates/awm-tui/tests/snapshots/snapshot__triage.snap
---
source: crates/awm-tui/tests/snapshot.rs
expression: buffer_to_string(tui.backend())
---
┌! @1 cleaner [#2] BLOCKED 1020tok─────────────────────────────────────────────┐
│awaiting approval: rm -rf build                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌@0 builder [#1] working 3600tok───────────────────────────────────────────────┐
│compiling awm-core                                                            │
│Finished dev                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
